service/src/main/java/com/zliao/chacha/service/RuleEngine/patternmatcher/PatternMatcher.java
/* Generated By:JavaCC: Do not edit this line. PatternMatcher.java */
package com.zliao.chacha.service.RuleEngine.patternmatcher;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.HashSet;
import java.util.List;
import com.zliao.chacha.service.RuleEngine.tools.Util;

public class PatternMatcher implements PatternMatcherConstants {
    public PatternMatcher(String s){
        this((new StringReader(s)));
    }

    public static void main(String args[]){
        try{
              String rule="[]*? [type='singer'] []*  [type='song'] []* ->  5 com.zliao.chacha.service.RuleEngine.patternmatcher.TestAction('$1' '$2'  '$3' 'aaa')";
              PatternMatcher pm = new PatternMatcher(rule);
              MatchRule mr=pm.matchrule(rule);
              System.out.println(mr.getScore());
              ArrayList<MatchToken> tokens=new ArrayList<MatchToken>();
              {
                MatchToken token=new MatchToken("\u653e");
                tokens.add(token);
              }
              {
                HashMap<String,Object> attrs=new HashMap<String,Object>();
                HashSet<String> types=new HashSet<String>();
                types.add("singer");
                types.add("song");
                attrs.put("type", types);
                attrs.put("text", "\u5218\u5fb7\u534e");
                MatchToken token=new MatchToken(attrs);
                tokens.add(token);
              }
              {
                MatchToken token=new MatchToken("\u6f14\u5531");
                tokens.add(token);
              }
              {
                MatchToken token=new MatchToken("\u7684");
                tokens.add(token);
              }
              {
                HashMap<String,Object> attrs=new HashMap<String,Object>();
                HashSet<String> types=new HashSet<String>();
                types.add("song");
                attrs.put("type", types);
                attrs.put("text", "\u5fd8\u60c5\u6c34");
                MatchToken token=new MatchToken(attrs);
                tokens.add(token);
              }
              int[] matchIdx=new int[mr.getConditions().size()];
              boolean match=MatchRule.recurMatch(tokens, mr.getConditions(), 0, 0, matchIdx);
              System.out.println("match: "+match);
              for(int idx:matchIdx){
                System.out.println(idx);
              }

              double s=(Double)mr.patternMatch(tokens);
              System.out.println("matchScore: "+s);
        }catch(Exception e){
            e.printStackTrace();
        }
    }

  final public MatchRule matchrule(String originalRule) throws ParseException {
    ArrayList<MatchCondition> cond=new ArrayList<MatchCondition>();
    Token id;
    Token idClass;
    ArrayList<String> prms;
    cond = conditions();
    jj_consume_token(33);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOUBLE:
      id = jj_consume_token(DOUBLE);
      break;
    case INTEGER:
      id = jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    idClass = jj_consume_token(CLASSNAME);
    jj_consume_token(LPAREN);
    prms = params();
    jj_consume_token(RPAREN);
    jj_consume_token(0);
                double score=Double.valueOf(id.image);
                String className=idClass.image;
                MatchRule rr = null;
                try{
                        rr=new MatchRule(originalRule, cond, score, className, prms);
                }catch(Exception e){
                        e.printStackTrace();
                }
                {if (true) return rr;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> params() throws ParseException {
        ArrayList<String> result = new ArrayList<String>(5);
        Token id;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED_STRING:
      case QUOTED_STRING2:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED_STRING:
        id = jj_consume_token(QUOTED_STRING);
                        result.add(id.image.substring(1,id.image.length()-1));
        break;
      case QUOTED_STRING2:
        id = jj_consume_token(QUOTED_STRING2);
                        result.add(id.image.substring(1,id.image.length()-1));
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<MatchCondition> conditions() throws ParseException {
        int condIdx=0;
        ArrayList<MatchCondition> conds=new ArrayList<MatchCondition>();
        MatchCondition cond;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      cond = condition();
                        conds.add(cond);
                        condIdx++;
    }
                {if (true) return conds;}
    throw new Error("Missing return statement in function");
  }

  final public MatchCondition condition() throws ParseException {
        String s="";
        MatchCondition cond;
        Token starMin;
        Token starMax;
    cond = realCondition();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STAR:
      jj_consume_token(STAR);
                cond.setStared(true);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOTGREEDY:
      jj_consume_token(NOTGREEDY);
                        cond.setGreedy(false);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OUTOFORDER:
      jj_consume_token(OUTOFORDER);
                        cond.setOutOfOrder(true);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      starMin = jj_consume_token(INTEGER);
      jj_consume_token(34);
      starMax = jj_consume_token(INTEGER);
      jj_consume_token(RBRACKET);
                        cond.setStared(true);
                        cond.setStarMin(Integer.valueOf(starMin.image).intValue());
                        cond.setStarMax(Integer.valueOf(starMax.image).intValue());
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
                {if (true) return cond;}
    throw new Error("Missing return statement in function");
  }

  final public MatchCondition realCondition() throws ParseException {
        OrExpression expression=null;
    jj_consume_token(35);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case LPAREN:
    case IDENTIFIER:
      expression = orExp();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(36);
                {if (true) return new MatchCondition(expression,true,false,false);}
    throw new Error("Missing return statement in function");
  }

  final public OrExpression orExp() throws ParseException {
    List<BaseExpression> andExps=new ArrayList<BaseExpression>();
    AndExpression andexpRtn;
    andexpRtn = andexp();
                andExps.add(andexpRtn);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(OR);
      andexpRtn = andexp();
                andExps.add(andexpRtn);
    }
                {if (true) return new OrExpression(andExps);}
    throw new Error("Missing return statement in function");
  }

  final public AndExpression andexp() throws ParseException {
    List<BaseExpression> baseExps=new ArrayList<BaseExpression>();
        BaseExpression expRtn;
    expRtn = baseExp();
                baseExps.add(expRtn);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(AND);
      expRtn = baseExp();
                baseExps.add(expRtn);
    }
                {if (true) return new AndExpression(baseExps);}
    throw new Error("Missing return statement in function");
  }

  final public BaseExpression baseExp() throws ParseException {
        BaseExpression expsRtn;
        Token id;
        Object attr=null;
        int opType=0;
        String left;
        Object right;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      id = jj_consume_token(IDENTIFIER);
                //sb.append("attrs.get(\""+id.image+"\")!=null && attrs.get(\""+id.image+"\")");  
                left=id.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        jj_consume_token(EQUALS);
                        opType=1;
        break;
      case NOTEQUAL:
        jj_consume_token(NOTEQUAL);
                        opType=2;
        break;
      case STARTSWITH:
        jj_consume_token(STARTSWITH);
                        opType=3;
        break;
      case ENDSWITH:
        jj_consume_token(ENDSWITH);
                        opType=4;
        break;
      case CONTAINS:
        jj_consume_token(CONTAINS);
                        opType=5;
        break;
      case LIKE:
        jj_consume_token(LIKE);
                        opType=6;
        break;
      case REGEX:
        jj_consume_token(REGEX);
                        opType=7;
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED_STRING:
        id = jj_consume_token(QUOTED_STRING);
                        right=id.image.substring(1,id.image.length()-1);
                        right=Util.unescapeJavaString(right.toString());
        break;
      case QUOTED_STRING2:
        id = jj_consume_token(QUOTED_STRING2);
                        right=id.image.substring(1,id.image.length()-1);
                        right=Util.unescapeJavaString(right.toString());
        break;
      case TRUE:
        jj_consume_token(TRUE);
                        right=true;
        break;
      case FALSE:
        jj_consume_token(FALSE);
                        right=false;
        break;
      case INTEGER:
        jj_consume_token(INTEGER);
                        right=Integer.valueOf(id.image);
        break;
      case DOUBLE:
        jj_consume_token(DOUBLE);
                        right=Double.valueOf(id.image);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                        switch(opType)
                        {
                        case 1:
                        expsRtn=new EqualExpression(left, right);
                                break;
                    case 2:
                        expsRtn=new NotEqualExpression(left, right);
                                break;
                        case 3:
                        expsRtn=new StartsWithExpression(left, (String)right);
                                break;
                        case 4:
                        expsRtn=new EndsWithExpression(left, (String)right);
                                break;
                        case 5:
                                expsRtn=new ContainsExpression(left, (String)right);
                                break;
                        case 7:
                                expsRtn=new RegexExpression(left, (String)right);
                                break;
                        default:
                            {if (true) throw new RuntimeException("unknown opType: "+opType);}
                        }
                {if (true) return expsRtn;}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      expsRtn = orExp();
      jj_consume_token(RPAREN);
                        {if (true) return expsRtn;}
      break;
    case NOT:
      jj_consume_token(NOT);
      jj_consume_token(LPAREN);
      expsRtn = orExp();
      jj_consume_token(RPAREN);
                {if (true) return new NotExpression(expsRtn);}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public PatternMatcherTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x30000000,0xc000000,0xc000000,0x0,0x80000,0x100000,0x200000,0x400000,0x2000180,0x40,0x20,0x7f000,0x3c000c00,0x2000180,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x8,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public PatternMatcher(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PatternMatcher(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PatternMatcherTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public PatternMatcher(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new PatternMatcherTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public PatternMatcher(PatternMatcherTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(PatternMatcherTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 14; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
